--- a/build.gradle
+++ b/build.gradle
@@ -18,4 +18,16 @@ dependencies {
         exclude module : 'hamcrest-core'
     }
     testCompile 'org.hamcrest:hamcrest-library:1.3'
+    testCompile ('org.spockframework:spock-core:0.7-groovy-2.0') {
+        exclude module : 'groovy-all'
+    }
+}
+
+idea.project.ipr {
+    withXml { provider ->
+        def map = provider.node.component.find { it.@name == 'VcsDirectoryMappings' }.mapping
+        map.@vcs = 'Git'
+        map.@directory = project.properties.projectDir
+
+    }
 }
